# CUQIpy-FEniCS

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  sg_execution_times.html
.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/api/: index.doctree
.github/workflows/: docs.yml  publish_pypi.yml  tests.yml
_sources/: index.rst.txt
api/: index.html
api/_autosummary/: cuqipy_fenics.config.html  cuqipy_fenics.geometry.html  cuqipy_fenics.html  cuqipy_fenics.pde.html  cuqipy_fenics.testproblem.html  cuqipy_fenics.utilities.html
cuqipy_fenics/: __init__.py  config.py  geometry.py  pde.py  testproblem.py  time_integrator.py  utilities.py
demos/: demo01_1D_Diffusion.ipynb  demo01_1D_Diffusion.py  demo02_Matern.py  demo03_poisson_circular.py  demo04_gradient_based_sampling.py  demo05_reuse_assemble.py  demo07_TempDemo.py  demo07_sample_statistics.py  demo_FEniCSPoisson2D.py  try01_FenicsGeometry.py
dev/_auto_dev/: index.html  sg_execution_times.html
docs/: conf.py  index.rst
docs/api/: index.rst
docs/dev/: index.rst
tests/: test_PDEModel.py  test_geometry.py  test_samples.py  test_testproblem.py
tests/data/: MaternExpansion_basis.npz  samples_before_adding_reuse_assembled_feature.npz  samples_test_with_rhs_write_from_pytests_e349834fc189e1e1da6a962cdfe449f94486824e.npz
user/_auto_howtos/: index.html  sg_execution_times.html
user/_auto_tutorials/: index.html  sg_execution_times.html
(+694 files in other folders)
